--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
   <section class="contenedor">
     <section class="contenedor1">
       <section class="bloque1">
+        <div class="icono_menu">
+          <img src="images/icon-menu.svg" alt="menu">
+        </div>
         <div class="logo">
           <img src="images/logo.svg" alt="logo" class="logo">
         </div>
-        <div>
+        <div class="menu">
           <ul class="navegador">
             <div class="raya">
               <li>Collection</li>
@@ -190,10 +193,43 @@
         <p>3</p>
       </div>
     </section>
+    <section class="contenedor6">
+      <div class="menu_total">
+        <div class="cerrar_nuevo">
+          <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z"
+              fill="#69707D" fill-rule="evenodd" />
+          </svg>
+        </div>
+        <div class="menu_nuevo">
+          <ul class="navegador_nuevo">
+            <div class="raya_nuevo">
+              <li>Collection</li>
+            </div>
+            <div class="raya_nuevo">
+              <li>Men</li>
+            </div>
+            <div class="raya_nuevo">
+              <li>Women</li>
+            </div>
+            <div class="raya_nuevo">
+              <li>About</li>
+            </div>
+            <div class="raya_nuevo">
+              <li>Contact</li>
+            </div>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="contenedor7">
+      <div class="sombra"></div>
+    </section>
   </section>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Angel Veliz</a>.
+    Coded by <a href="https://github.com/angelveliz1837/paginaDeProductoDeComercioElectronico">Angel Veliz</a>.
   </div>
 </body>
 <script src="script.js"></script>
