--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
     </section>
   </section>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Challenge by <a href="https://www.frontendmentor.io/challenges/ecommerce-product-page-UPsZ9MJp6"
+      target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/angelveliz1837/paginaDeProductoDeComercioElectronico">Angel Veliz</a>.
   </div>
 </body>
